--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,15 @@
         font-size: 2rem;
     }
 }
+@media screen and (max-width: 768px){
+    .emoji{
+        font-size: 1.5rem;
+    }
+   .frase{
+       font-size: 1.5rem;
+   }
+}
+
 
 
 
