--- a/css/style.css
+++ b/css/style.css
@@ -11,29 +11,30 @@ body{
     transition: all 1s ease-in-out;
 }
 .frase-container{
-    max-width: 1200px;
+    max-width: 1024px;
     padding: .5rem 1.5rem;
+    text-align: center;
     background-color: #f2f2f2;
+    transition: all 1s ease-in-out;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    border-radius: 50px 0 50px;
-    border-width: 5px;
+    border-width: 5px 0;
     border-style: solid;
     animation: changeborder 5s ease-in-out infinite alternate;
 }
 @keyframes changeborder {
     from{
-        border-color: orangered #FFC83D ;
+        border-color: orangered ;
     }
     to{
-        border-color: #FFC83D orangered;
+        border-color: #FFC83D;
     }
 }
 .frase{
-    font-size: 2rem;
-    margin-top: 0.5rem;
-    text-align: center;
+    font-size: 1.5rem;
+    margin: 1rem 0 ;
     color: #333;
 }
+
 .frase::before, .frase::after{
     font-weight: bold;
     font-size: 3rem;
@@ -51,24 +52,30 @@ body{
 }
 .emoji{
     display: block;
-    text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 1.5rem;
+}
+.type{
+    display: inline-block;
+    margin-bottom: 1.5rem;
+    font-weight: 200;
+    font-style: italic;
+}
+.type::before{
+    content: "-";
+    display: block;
+    line-height: 10px;
 }
 
 @media screen and (max-width: 1024px){
     .frase-container{
-        max-width: 90%;
-    }
-    .frase{
-        font-size: 1.5rem;
+        max-width: 100%;
+        padding: .5rem 1.5rem;
     }
     .frase::before, .frase::after{
         font-size: 2.5rem;
     }
-    .emoji{
-        font-size: 1.5rem;
-    }
+
 }
 
 
