--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body{
 }
 .frase-container{
     max-width: 1024px;
-    width: 100%;
     padding: .5rem 1.5rem;
     text-align: center;
     background-color: #f2f2f2;
@@ -60,7 +59,11 @@ body{
     font-weight: 200;
     
 }
-
+@media screen and (max-width: 768px) {
+    .frase-container{
+        width: 100%;
+    }
+}
 
 
 
