--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 
 :root{
     --color-primary: #121F3D;
-    --color-secondary: aquamarine;
+    --color-one: rgb(198, 123, 248);
+    --color-two: rgb(252, 23, 23);
+    --color-three: rgb(238, 241, 10);
 }
 body{
     font-family: 'Nunito', sans-serif;
@@ -20,43 +22,42 @@ body{
     max-width: 1024px;
     padding: .5rem 1.5rem;
     text-align: center;
-    border: 1px solid var(--color-secondary) ;
     border-radius: 20px;
     color: #f2f2f2;
     background-color: var(--color-primary);
     position: relative;
 }
+.frase-container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -2px;
+    border-radius: inherit;
+    background: linear-gradient(45deg, var(--color-one) 10%, var(--color-two) 60%, var(--color-three) 100%);
+}
 .shadow{
-    background-color: var(--color-secondary);
+    background: linear-gradient(45deg, var(--color-one) 0%, var(--color-two) 50%, var(--color-three) 100%);
     border-radius: 10px;
     width: 95%;
-    height: 102%;
+    height: 105%;
     position: absolute;
-    top: -0.25rem;
+    top: -0.20rem;
     left: 1rem;
     transform: rotate(358deg);
     z-index: -1;
 }
 .frase{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin: 1rem 0 ;
-}
-.type{
-    display: inline-block;
-    margin-bottom: 1.5rem;
-    font-weight: 200;
-    font-style: italic;
-}
-.type::before{
-    content: "-";
-    display: block;
-    line-height: 10px;
-
 }
 .number{
     font-weight: 200;
     font-size: 1rem;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     display: block;
 }
 @media screen and (max-width: 768px) {
