--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;700&display=swap');
 
-:root{
+:root {
     --color-primary: #121F3D;
     --color-one: rgb(198, 123, 248);
     --color-two: rgb(252, 23, 23);
     --color-three: rgb(238, 241, 10);
 }
-body{
+
+body {
     font-family: 'Nunito', sans-serif;
 }
-.container{
+
+.container {
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,16 +20,18 @@ body{
     position: relative;
     z-index: 100;
 }
-.frase-container{
+
+.frase-container {
     max-width: 768px;
     padding: .5rem 1.5rem;
     text-align: center;
     border-radius: 20px;
-    color: #f2f2f2;
+    color: rgb(242, 242, 242);
     background-color: var(--color-primary);
     position: relative;
 }
-.frase-container::before{
+
+.frase-container::before {
     content: '';
     position: absolute;
     top: 0;
@@ -39,7 +43,8 @@ body{
     border-radius: inherit;
     background: linear-gradient(45deg, var(--color-one) 10%, var(--color-two) 60%, var(--color-three) 100%);
 }
-.shadow{
+
+.shadow {
     background: linear-gradient(45deg, var(--color-one) 0%, var(--color-two) 50%, var(--color-three) 100%);
     border-radius: 10px;
     width: 95%;
@@ -50,25 +55,29 @@ body{
     transform: rotate(358deg);
     z-index: -1;
 }
-.frase{
+
+.frase {
     font-size: 1.3rem;
-    margin: 1rem 0 ;
+    margin: 1rem 0;
 }
-.number{
+
+.number {
     font-weight: 200;
-    font-size: 1rem;
-    margin-top: 1rem;
+    font-size: .9rem;
     display: block;
+    color: rgba(242, 242, 242, .4);
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
 }
+
 @media screen and (max-width: 768px) {
-    .frase-container{
+    .frase-container {
         width: 95%;
     }
-    .shadow{
+
+    .shadow {
         left: 0.5rem;
     }
 }
-
-
-
-
