--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,11 @@ body {
     width: 95%;
     height: 105%;
     position: absolute;
-    top: -0.20rem;
+    top: -0.10rem;
     left: 1rem;
-    /* transform: rotate(358deg); */
+    transform: rotate(358deg);
     z-index: -1;
-    animation: tambaleo 10s infinite ease-in-out;
+    animation: fadeInOut 10s infinite;
 }
 
 .frase {
@@ -84,38 +84,15 @@ body {
         left: 0.5rem;
     }
 }
-@keyframes tambaleo {
+
+@keyframes fadeInOut {
     0% {
-        transform: translate(0, 0) scaleX(1) scaleY(1);
-    }
-    10% {
-        transform: translate(-5px, -5px) scaleX(0.95) scaleY(1.05);
-    }
-    20% {
-        transform: translate(5px, -5px) scaleX(1.05) scaleY(0.95);
-    }
-    30% {
-        transform: translate(-5px, 5px) scaleX(0.95) scaleY(1.05);
-    }
-    40% {
-        transform: translate(5px, 5px) scaleX(1.05) scaleY(0.95);
+        opacity: 1;
     }
     50% {
-        transform: translate(-5px, -5px) scaleX(0.95) scaleY(1.05);
-    }
-    60% {
-        transform: translate(5px, -5px) scaleX(1.05) scaleY(0.95);
-    }
-    70% {
-        transform: translate(-5px, 5px) scaleX(0.95) scaleY(1.05);
-    }
-    80% {
-        transform: translate(5px, 5px) scaleX(1.05) scaleY(0.95);
-    }
-    90% {
-        transform: translate(-5px, -5px) scaleX(0.95) scaleY(1.05);
+        opacity: 0.5;
     }
     100% {
-        transform: translate(0, 0) scaleX(1) scaleY(1);
+        opacity: 1;
     }
 }
